@@ -1,3 +1,8 @@
+2002-10-25  Mirko Viviani  <mirko.viviani@rccr.cremona.it>
+
+	* Source/NSBundle.m ([NSBundle -load]): set _codeLoaded before loading
+	the bundle.
+
 2002-10-22  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Tools/AGSParser.m: Avoid duplication of method comments when
